# PPGSM

./: README.md
PPGSM/: AdvSearch.cpp  AdvSearch.h  CMakeCache.txt  CMakeLists.txt  Makefile  barasasi_large.sh  barasasi_small.sh  cmake_install.cmake  createRandomGraph.cpp  demo.sh  encryption.cpp  encryption.h  function.cpp  function.h  graph.cpp  graph.h  graph_client.cpp  graph_client.h  homomorphic_graph  main.cpp  random_large.sh  random_small.sh  real1.sh  real2.sh  run.sh  struct.h  test.cpp  testPPGSM
PPGSM/approxResult/: bara20_1  bara20_10  bara20_2  bara20_3  bara20_4  bara20_5  bara20_6  bara20_7  bara20_8  bara20_9  rand20_1  rand20_10  rand20_2  rand20_3  rand20_4  rand20_5  rand20_6  rand20_7  rand20_8  rand20_9
PPGSM/edges/: desc.txt  edgeTruth7
PPGSM/graphChart/: makeChart10.py  makeChart6.py  makeChart7.py  makeChart8.py  makeChart9.py
PPGSM/nodes/: desc.txt
PPGSM/obfuscation/: heuristic10.py  heuristic15.py  heuristic20.py  heuristic5.py
PPGSM/performance/: createRandomGraph.cpp  makeRandomGraph.py
PPGSM/query/: exp.txt
PPGSM/realNetworkData/: realGraph3-1  realGraph3-2
PPGSM/realNetworkDataSet/: a.out  makeMatrix.cpp  realGraph3  test  test3_512_1227
PPGSM/sampleData/: graphinfo1  graphinfo3
PPGSM/structure/: .graph.cpp.swp  graph.cpp  graph.h  struct.h
PPGSM/testData/: barabasiGraph  barabasiGraph_10  barabasiGraph_15  barabasiGraph_20  barabasiGraph_5  randomGraph  randomGraph_10  randomGraph_15  randomGraph_20  randomGraph_5  realGraph  realGraph_10  realGraph_15  realGraph_20  realGraph_5  spearBarabasiGraph  testtypeinfo  (+16 more)
(+183 files in other folders)
